Fixed text-align property

--- a/src/style.css
+++ b/src/style.css
@@ -31,12 +31,11 @@ html {
 }
 
 .nav__link:link {
-  text-align: center;
+  text-align: right;
   display: flex;
   flex-flow: column nowrap;
   text-decoration: none;
   text-transform: uppercase;
-  white-space: nowrap;
   color: #000;
   font-weight: 500;
   font-size: 12px;
